--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 spring.thymeleaf.cache=false
 
 welcome.message=Hello Thymeleaf
-error.message=First Name & Last Name is required!
+error.message=First Name & Last Name & Phone is required!
